logs/tinyocr.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinyocr'...
Listing './lib/python3.5/site-packages/tinyocr/const'...
Compiling './lib/python3.5/site-packages/tinyocr/database.py'...
***   File "./lib/python3.5/site-packages/tinyocr/database.py", line 274
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tinyocr/feature'...
Listing './lib/python3.5/site-packages/tinyocr/learner'...
Compiling './lib/python3.5/site-packages/tinyocr/ocr_manager.py'...
***   File "./lib/python3.5/site-packages/tinyocr/ocr_manager.py", line 138
    print "%s only occurs once; skipping in LOOCV." %char
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tinyocr/test'...
Listing './lib/python3.5/site-packages/tinyocr-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
